--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -11,7 +11,7 @@ CFLAGS	= @CFLAGS@
 LDFLAGS	= @LDFLAGS@
 LEX	= @LEX@
 LEXLIB	= @LEXLIB@
-DEFS	= @DEFS@
+DEFS	= @DEFS@ @CPPFLAGS@
 LN	= @LN@
 RM	= @RM@
 
