--- a/Makefile.in
+++ b/Makefile.in
@@ -179,7 +179,7 @@ installirc: scrollz installdirs
 	@(cd $(DESTDIR)/$(bindir) ; $(LN) scrollz-$(VERSION) scrollz)
 	@cp doc/ScrollZ.doc $(DESTDIR)/$(IRCDOC)
 
-installman: scrollz.1
+installman: installdirs scrollz.1
 	$(INSTALL) scrollz.1 $(DESTDIR)/$(mandir)
 
 installserv: installio
@@ -197,7 +197,7 @@ installdirs:
 		$(DESTDIR)/$(INSTALL_SCRIPT) \
 		$(DESTDIR)/$(HELP_DIR) $(DESTDIR)/$(IRCDOC) $(DESTDIR)/$(mandir)
 
-installhelp:
+installhelp: installdirs
 	$(INSTALL_HELP_CMD)
 	find $(DESTDIR)/$(HELP_DIR) -type d -print | xargs chmod a+rx
 	find $(DESTDIR)/$(HELP_DIR) -type f -print | xargs chmod a+r
