--- a/scrollz.1.in
+++ b/scrollz.1.in
@@ -5,6 +5,8 @@
 ScrollZ \- An advanced ircII-based IRC client
 .SH SYNOPSIS
 .B scrollz
+.RB [ \-4 ]
+.RB [ \-6 ]
 .RB [ \-c
 .IR chan ]
 .RB [ \-p
@@ -53,6 +55,12 @@ scripting, Blowfish based encryption, features for
 operators and user friendly features such as completion for nicks
 and channels.
 .SH OPTIONS
+.TP
+.BI \-4
+Use IPv4 protocol when connecting to a server.
+.TP
+.BI \-6
+Use IPv6 protocol when connecting to a server.
 .TP
 .BI \-c " channel"
 Joins channel on startup
