--- a/Makefile.in
+++ b/Makefile.in
@@ -51,7 +51,7 @@ prefix = @prefix@
 exec_prefix = @exec_prefix@
 bindir = @bindir@
 sharedir = @prefix@/share
-mandir = @prefix@/man/man1
+mandir = @prefix@/share/man/man1
 
 DESTDIR =
 
