Make Trace a optional compile time feature.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -427,4 +427,7 @@
 /* Define this if you want client to remember /OPER password and
    send it on reconnect */
 #undef BLAXTHOS
+
+/* Define this if you want to enable TRACE facility */
+#undef SZTRACE
 /****************************************************************************/
