--- a/Makefile.in
+++ b/Makefile.in
@@ -122,7 +122,7 @@ LN = @LN@
 CP = cp
 MV = mv
 INSTALL = ./bsdinstall -c -m 755
-INSTALL_DATA = ../bsdinstall -c -m 644
+INSTALL_DATA = ./bsdinstall -c -m 644
 
 VERSION = @VERSION@
 
