Added support for desktop notifications.

--- a/include/defs.h.in
+++ b/include/defs.h.in
@@ -430,4 +430,7 @@
 
 /* Define this if you want to enable TRACE facility */
 #undef SZTRACE
+
+/* Define this if you have libnotify */
+#undef HAVE_LIBNOTIFY
 /****************************************************************************/
