--- a/configure.in
+++ b/configure.in
@@ -1441,6 +1441,44 @@ if test "x$fish" = "xno" -o "x$fish" = "x" ; then
     fish=no
 fi
 
+AC_MSG_CHECKING(whether to enable notification support)
+AC_ARG_ENABLE(notify,
+[  --enable-notify         Enable notification support],
+[ case "$enableval" in
+  yes) 
+     AC_MSG_RESULT(yes)
+     olibs="$LIBS"
+     ocflags="$CFLAGS"
+     AC_MSG_CHECKING(for libnotify)
+     pkg-config --exists libnotify >/dev/null 2>&1
+     if test $? -ne 0;
+     then
+         AC_MSG_RESULT(no)
+         notify=no
+     else
+         CFLAGS="$ocflags `pkg-config --cflags libnotify`"
+         LIBS="$olibs `pkg-config --libs libnotify`"
+         AC_TRY_LINK([
+#include <libnotify/notify.h>
+    ],   [ notify_notification_new("name", "test", NULL); ],
+         [ AC_MSG_RESULT(yes)
+         AC_DEFINE(HAVE_LIBNOTIFY)
+         notify=yes ],
+         [ AC_MSG_RESULT(no)
+         LIBS="$olibs"
+         CFLAGS="$ocflags"
+         notify=no ])
+     fi
+     ;;
+  *) 
+     AC_MSG_RESULT(no)
+     notify=no
+     ;;
+  esac ],
+[ AC_MSG_RESULT(no)
+  notify=no
+])
+
 if test -n "$hpux"
 then
 	# HP-UX's pax is broken
