--- a/configure.in
+++ b/configure.in
@@ -36,7 +36,7 @@ dnl
 dnl thanks to the screen 3.3 configure.in for giving me examples to
 dnl work from and steal ;)
 dnl
-dnl @(#)$Id: configure.in,v 1.56 2009-12-21 14:56:02 f Exp $
+dnl @(#)$Id: configure.in,v 1.57 2021-04-26 20:48:16 t Exp $
 
 # So many systems seem to need this that it is better do it here automatically.
 if test "x$prefix" != xNONE; then
@@ -176,31 +176,6 @@ else
   AC_MSG_RESULT(no)
 fi
 
-dnl
-dnl check for hpux, and hpux version
-dnl
-
-AC_MSG_CHECKING(for hpux version)
-if test -f /hp-ux -o -f /stand/vmunix; then
-  AC_MSG_RESULT(yes)
-  hpux=1
-  uname=`uname -r` 2> /dev/null
-  case $uname in
-	A.09* | A.9* | a.9* | a.09* | 9* | 09* | B.09*)
-		;;
-	A.08* | A.8* | a.8* | a.08* | 8* | 08*)
-		AC_DEFINE(HPUX8)
-		;;
-	A.07* | A.B7* | A.7* | a.7* | a.07* | 7* | 07*)
-		AC_DEFINE(HPUX7)
-		;;
-	*)
-		AC_DEFINE(HPUXUNKNOWN)
-		;;
-  esac
-else
-  AC_MSG_RESULT(no)
-fi
 
 AC_MSG_CHECKING(for ultrix)
 AC_EGREP_CPP(yes,
